src/styles/global.css
@import url("reset.css");
@import url("fonts.css");

html {
  height: 100%;
  /* background-color: #8590aa; */
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  /* background-image: linear-gradient(#8590aa, #c4dbf6);
  background-repeat: no-repeat;
  background-attachment: fixed; */
  /* background-image: url("../../public/images/BlackWhiteCover.jpg"); */

  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
    url("../../public/images/BlackWhiteCover.jpg");
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
  background-position: center center;
  height: 100vh;
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  line-height: 1.6;
  font-size: 18px;
  height: 100%;
  color: white;
}

a {
  color: white;
}

h1 {
  text-align: center;
  font-family: "Redressed";
  font-size: 48px;
}

.topSection {
  max-width: 72rem;
  padding: 0 1rem;
  margin: 1rem auto 3rem;
}

/* The use of both "bottomSection" and "bottomContent" is to allow a background that completely covers the body's background 
while still using the same margins and padding as the top */
.bottomSection {
  background-color: white;
  color: black;
}

.bottomContent {
  max-width: 72rem;
  padding: 0 1rem;
  margin: 1rem auto 3rem;
}

* {
  box-sizing: border-box;
}

a.menuHeader {
  text-decoration: none;
  font-family: "Redressed";
  font-size: 28px;
}

a:hover {
  text-decoration: underline;
}

img {
  max-width: 100%;
  display: block;
}

.pageHeader {
  text-align: center;
  background-image: linear-gradient(#3b8beb, #c4dbf6);
  /* background-color: #3b8beb; */
}

.banner {
  text-align: center;
  /* background-color: blue; */
  font-family: "Spicy Rice", fantasy;
  font-weight: unset;
  font-size: 67px;
  color: white;
  /* grid-column: 1 / 4; */
}

.menu {
  display: inline-block;
}

.navbar {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  list-style: none;
  vertical-align: top;
  margin: 0 100px 0 100px;
}

.dropdown-list {
  visibility: hidden;
  position: absolute;
  /* display: none; */
  list-style: none;
  padding: unset;
  margin: unset;
  opacity: 0;
  transition: opacity 0.2s ease;
}

.menu:hover .dropdown-list {
  visibility: visible;
  /* display: block; */
  text-align: left;
  opacity: 1;
  /* opacity: 0.3;
  background-color: #3b8beb; */
  padding: 2px;
  z-index: 10;
  font-size: 20px;
}

.non-home-dropdown {
  background-color: white;
  /* background: rgba(59, 139, 235, 1); */
}

.dropdown-menu-item a {
  text-decoration: none;
  padding: 2px 2px 2px 6px;
  white-space: nowrap;
}

.dropdown-menu-item a:hover {
  text-decoration: underline;
}

.imageContainer {
  /* Not sure why CSS doesn't let me set margins in one line on floating elements */
  margin: 50px;
  padding: 0;
}

.newsContainer {
  display: grid;
  padding-top: 8em;
}

.newsHeader {
  grid-column: 1/4;
  text-align: center;
  font-family: "Spicy Rice";
  color: #2dea3b;
  font-size: 50px;
}

@media screen and (max-width: 799px) {
  .newsContainer {
    clear: both;
    display: block;
    margin-left: 10px;
  }
  .authorBio {
    margin-right: 2rem;
    margin-left: 0;
  }
}

@media screen and (min-width: 800px) {
  .newsContainer {
    clear: both;
    grid-template-columns: 1fr 1fr 1fr;
    margin-left: 20px;
  }
  .authorBio {
    margin-right: 2rem;
    margin-left: 0;
  }
}

@media screen and (min-width: 1024px) {
  .newsContainer {
    clear: both;
    grid-template-columns: 1fr 1fr 1fr;
    margin-left: 20px;
  }
  .book-recommendation {
    margin: 0 6em 0 6em;
  }
  .authorBio {
    margin-right: 10rem;
    margin-left: 1rem;
  }
}

.newsItem {
  margin-left: 20px;
}

.newsItem h2 {
  margin-top: 30px;
  color: #b23850;
}

.newsItem a {
  color: blue;
}

.dateDisplay {
  font-size: smaller;
  margin-left: 10px;
  opacity: 0.9;
}

.forceBelow {
  clear: both;
}

.chapter-1-link {
  font-size: 18px;
  padding: 0.5em 2em 0.5em 2em;
  background-color: #e65746;
  color: white;
  border: none;
  border-radius: 3px;
}

.simpleText {
  margin: 10px;
}

.nonFormatted {
  all: unset;
}

.nonFormatted:hover {
  all: unset;
  cursor: pointer;
}

.generalText {
  margin: 0 12rem 0 4rem;
}

@media screen and (max-width: 800px) {
  .generalText {
    margin: 0 4rem 0 1rem;
  }
}

nav {
  display: block;
  margin-left: auto;
  margin-right: auto;
  /* grid-column: 1 / 4; */
  width: 100%;
}

.nonHomeNav {
  color: black;
  background-color: white;
  padding: 0.5em 2em 0.5em 2em;
}

.nonHomeNav a {
  color: black;
  font-size: 22px;
  font-family: Arial;
  margin: 0 0.5em 0 0.5em;
}

.negativeTopMargin {
  display: block;
  margin-top: -0.6em;
}

.pitch {
  /* grid-column: 1/4; */
  justify-content: space-around;
  display: grid;
  grid-template-columns: 1fr 1fr;
  margin-top: 4em;
}

@media (max-width: 1024px) {
  .pitch {
    grid-template-columns: 1fr;
  }
}

.pitchText {
  margin: 3em;
  text-align: center;
}

.fancyTitle {
  font-family: "Spicy Rice", fantasy;
  text-align: center;
  margin-top: -3em;
}
.title-i-like {
  font-size: 45px;
  margin-top: -1em;
}

.title-monsters {
  color: #2dea3b;
  font-size: 110px;
  margin-top: -0.8em;
}

.title-except-my-teacher {
  font-size: 30px;
  margin-top: -2em;
}

.chapter1Header {
  text-align: center;
}

.chapter1Header a {
  color: #2dea3b;
  font-size: 55px;
  font-family: "Spicy Rice", fantasy;
}

.purchaseLink {
  text-align: center;
}

.purchaseLink a {
  font-size: 18px;
  padding: 0.5em 2em 0.5em 2em;
  background-color: #e65746;
  color: white;
  border: none;
  border-radius: 3px;
}

.book-recommendation li {
  list-style-type: none;
  max-width: 600px;
  clear: both;
}

.book-recommendation h3 {
  clear: both;
  margin-bottom: -12px;
}

.book-recommendation h3 a {
  color: #8a88fd;
  font-size: 28px;
}

/* .book-recommendation * {
  clear: both;
} */

.book-recommendation img {
  float: left;
  margin-bottom: 2px;
  margin-top: 8px;
  margin-right: 8px;
}

.book-rec-image-container {
  position: relative;
  width: 400px;
}

.footer {
  bottom: 0;
  width: 100%;
  display: grid;
  grid-template-columns: 1fr 1fr;
  max-width: 60rem;
  padding: 0 1rem 3rem 4rem;
  margin: 1rem auto 3rem;
  font-size: 24px;
  justify-content: center;
}

@media screen and (max-width: 600px) {
  .footer {
    grid-template-columns: 1fr;
  }
}

/* .topSection {
  max-width: 72rem;
  padding: 0 1rem;
  margin: 1rem auto 3rem;
} */

.footer input {
  margin-right: 0.2rem;
  padding: 5px;
  font-size: 20px;
}

.footer button {
  padding: 0.2rem 2rem 0.2rem 2rem;
  background-color: #e65746;
  color: white;
  font-size: 20px;
  border-radius: 5px;
}

.footer p {
  margin-left: 0.5rem;
}

div.socialMedia {
  margin: 4rem 0 0 3rem;
}

.aboutMeImage {
  float: left;
  margin: 0.5rem 1rem;
  border-radius: 5px;
}

.hamburger {
  display: none;
}

.mobileNav {
  background-color: white;
  color: black;
  margin-top: -18px;
}

.mobileNav a {
  color: black;
}

@media (max-width: 800px) {
  .hamburger {
    /* display: fixed;
    width: 2rem;
    height: 2rem; */
    display: flex;
    /* justify-content: space-around; */
    /* flex-flow: column nowrap; */
    z-index: 10;
    background-color: white;
  }
  .hamburgerIntermediate {
    margin: 0.1em 0.4em 0.2em 0.1em;
  }
  .showX .burger:nth-child(1) {
    transform: rotate(45deg) translate(5px, -9px);
  }

  .showX .burger:nth-child(2) {
    opacity: 0;
  }

  .showX .burger:nth-child(3) {
    transform: rotate(-45deg) translate(5px, 9px);
  }

  .nonHomeNav {
    display: none;
  }
  .homeNav {
    display: none;
  }
}

@media (min-width: 801px) {
  .mobileNav {
    display: none;
  }
}

.nonHomeHamburger {
  color: black;
  background-color: white;
  padding: 0.1em 0.2em 0.1em 0.2em;
}

.homeHamburger {
}

.burger {
  width: 2rem;
  height: 0.25rem;
  border-radius: 10px;
  background-color: black;
  transform-origin: 1px;
  transition: all 0.1s linear;
  margin-top: 0.25rem;
}

.errorMessage {
  color: red;
  font-size: 16px;
}

.nonHomeNavMobile {
  transition: all 0.4s ease;
}

.hidden {
  opacity: 0;
  overflow: hidden;
  max-height: 0;
}
.visible {
  opacity: 1;
  max-height: 30em;
}

.affiliateDisclosure {
  font-size: 16px;
  grid-column: span 2;
  margin: 1.8rem 2rem 0 0;
}

